<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5F5"
    tools:context=".ChatActivity">

    <LinearLayout
        android:id="@+id/bottom_navbar_blue_recipe"
        android:layout_width="103dp"
        android:layout_height="60dp"
        android:background="@drawable/navbar_rectangle_dark"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1"></LinearLayout>

    <LinearLayout
        android:id="@+id/bottom_navbar_blue_inventory"
        android:layout_width="103dp"
        android:layout_height="60dp"
        android:background="@drawable/navbar_rectangle_dark"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.66666666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1">

    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottom_navbar_blue_scanner"
        android:layout_width="103dp"
        android:layout_height="60dp"
        android:background="@drawable/navbar_rectangle_dark"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333333333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1">

    </LinearLayout>



    <LinearLayout
        android:id="@+id/bottom_navbar_green"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:background="@drawable/navbar_rectangle"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"></LinearLayout>

    <LinearLayout
        android:id="@+id/bottom_navbar_blue_chat"
        android:layout_width="103dp"
        android:layout_height="60dp"
        android:background="@drawable/navbar_rectangle_dark"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1">

    </LinearLayout>

    <ImageButton
        android:id="@+id/chat_icon_chat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/chat_icon_light_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1"
        app:srcCompat="@drawable/chat_light_40" />

    <ImageButton
        android:id="@+id/scan_icon_chat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/scanner_icon_dark_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.35"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1"
        app:srcCompat="@drawable/scanner_dark_40" />

    <ImageButton
        android:id="@+id/inventory_icon_chat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/inventory_icon_dark_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.65"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1"
        app:srcCompat="@drawable/inventory_dark_40" />

    <ImageButton
        android:id="@+id/recipe_icon_chat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/recipe_icon_dark_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1"
        app:srcCompat="@drawable/recipe_dark_40" />

<!--    <ImageButton-->
<!--        android:id="@+id/shop_icon_chat"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:backgroundTint="#00FFFFFF"-->
<!--        android:contentDescription="@string/shop_icon_dark_description"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.1"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintVertical_bias="0.05"-->
<!--        app:srcCompat="@drawable/shop_cart_dark_40" />-->

    <ImageButton
        android:id="@+id/menu_bar_icon_chat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/menu_bar_icon_dark_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05"
        app:srcCompat="@drawable/menu_bar_dark_40" />

    <FrameLayout
        android:id="@+id/chatBox"
        android:layout_width="350dp"
        android:layout_height="500dp"
        android:background="@color/mint_green"
        android:visibility="visible"
        app:layout_constrainedHeight="true"
        app:layout_constraintBottom_toBottomOf="@+id/bottom_navbar_green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible">


    </FrameLayout>

    <View
        android:id="@+id/viewBackground"
        android:layout_width="350dp"
        android:layout_height="420dp"
        android:background="@color/mint_green"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="@+id/chatBox"
        app:layout_constraintStart_toStartOf="@+id/chatBox"
        app:layout_constraintTop_toTopOf="@+id/chatBox"
        tools:visibility="visible"></View>

    <Button
        android:id="@+id/sendButton"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:layout_marginRight="@dimen/_16sdp"
        android:layout_marginBottom="@dimen/_12sdp"
        android:background="@color/faded_white"
        app:layout_constraintBottom_toBottomOf="@id/chatBox"
        app:layout_constraintEnd_toEndOf="@id/chatBox"
        ></Button>

    <FrameLayout
        android:id="@+id/layoutSend"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:layout_marginRight="@dimen/_16sdp"
        android:layout_marginBottom="@dimen/_12sdp"
        android:background="@color/faded_white"
        app:layout_constraintBottom_toBottomOf="@id/chatBox"
        app:layout_constraintEnd_toEndOf="@id/chatBox">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/_4sdp"
            android:layout_marginLeft="@dimen/_4sdp"
            android:src="@drawable/ic_send"/>

    </FrameLayout>

    <EditText
        android:id="@+id/inputMessage"
        android:layout_width="0dp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginStart="@dimen/_16ssp"
        android:layout_marginLeft="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_marginRight="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_12sdp"
        android:background="@color/dark_blue"
        android:hint="Type a Message:"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:inputType="text"
        android:paddingStart="@dimen/_16sdp"
        android:paddingEnd="@dimen/_16sdp"
        android:textColor="@color/faded_white"
        android:textColorHint="@color/faded_white"
        app:layout_constraintBottom_toBottomOf="@id/chatBox"
        app:layout_constraintEnd_toStartOf="@id/layoutSend"
        app:layout_constraintStart_toStartOf="@id/chatBox"/>
</androidx.constraintlayout.widget.ConstraintLayout>