<resources>
    <string name="app_name">grocerymanager</string>
    <string name="front_banner">Grocery Manager</string>

    <string name="menu_bar">---</string>

    <!-- Admin Activity -->
    <string name="remove_button">Remove</string>
    <string name="approve_button">Approve</string>
...
    <string name="manage_inventory_button">Manage\nInventory</string>
    <string name="consult_dietitian_button">Consult A\nDietitian</string>
    <string name="suggested_recipes_button">Suggested\nRecipes</string>
    <string name="shop_list_button">Shopping\nList</string>

    <string name="assistance_home">How Can I Be Of Assistance?</string>
    <string name="salutations_home">Welcome Back!</string>
    <string name="salutations_name_home">Hello User!</string>


    <!-- Inventory Page -->
    <string name="add_items_button">+ Add Items</string>

...
